--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
   "name": "gulp-svg-sprite-task",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
-    "start": "gulp"
+    "start": "gulp watch",
+    "build": "gulp build"
   },
   "author": "Sergey Khmelevskoy <sergey@khmelevskoy.co>",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-cache": "^1.0.2",
-    "gulp-cheerio": "^0.6.2",
+    "ansi-colors": "^4.1.3",
+    "cheerio": "^1.0.0-rc.12",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-cache": "^1.1.3",
+    "gulp-cheerio": "^1.0.0",
     "gulp-consolidate": "^0.2.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.1",
+    "gulp-notify": "^4.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-svg-sprites": "^4.1.2",
-    "gulp-svgmin": "^1.2.4",
-    "gulp-svgstore": "^6.1.0",
-    "gulp-util": "^3.0.8",
-    "lodash": "^4.17.10",
+    "gulp-svgmin": "^3.0.0",
+    "gulp-svgstore": "^9.0.0",
+    "lodash": "^4.17.21",
     "path": "^0.12.7",
-    "require-dir": "^1.2.0",
-    "run-sequence": "^2.0.0",
-    "through2": "^2.0.3"
-  },
-  "resolutions": {
-    "natives": "1.1.3"
+    "run-sequence": "^2.2.1",
+    "sass": "^1.58.0",
+    "through2": "^4.0.2"
   }
 }
